[project]
name = "pebble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.3",
    "expecttest>=0.2.1",
    "torch>=2.4.1",
    "numpy>=2.1.1",
    "ipykernel>=6.29.5",
    "pyyaml>=6.0.2",
    "pandas>=2.2.2",
    "tqdm>=4.66.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pebble"]

[pytest]
pythonpath = "."